--- a/app/src/main/res/values-de/strings_menu.xml
+++ b/app/src/main/res/values-de/strings_menu.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="menu_title_partners">Partner</string>
+    <string name="menu_title_configuration">Aufbau</string>
+    <string name="menu_title_help">Hilfe &amp; Unterstützung</string>
 
+    <string name="menu_account">Printoid-Konto</string>
     <string name="menu_connect_server">OctoPrint verbinden</string>
     <string name="menu_connect_printer">Drucker verbinden</string>
     <string name="menu_disconnect_printer">Drucker trennen</string>
@@ -16,16 +19,16 @@
     <string name="menu_full_screen_slicer">Slicer maximieren</string>
     <string name="menu_full_screen_more_tools">Extruder maximieren</string>
     <string name="menu_minimize">Minimieren</string>
-    <string name="menu_printer_profiles_settings">OctoPrint\nServer</string>
-    <string name="menu_app_settings">Parameter der\nAnwendung</string>
+    <string name="menu_printer_profiles_settings">OctoPrint Server</string>
+    <string name="menu_app_settings">Parameter der Anwendung</string>
     <string name="menu_app_infos">Hilfe</string>
     <string name="menu_octoprint_web">OctoPrint Webansicht</string>
     <string name="menu_files">Dateien</string>
     <string name="menu_spools">Spulenverwaltung</string>
-    <string name="menu_printoid_web">Printoid\nWebsite</string>
+    <string name="menu_printoid_web">Printoid Website</string>
     <string name="menu_timelapse">Zeitraffer</string>
     <string name="menu_alarms">Warnungen</string>
-    <string name="menu_contact_developer">Contact\ndeveloper</string>
+    <string name="menu_contact_developer">Contact developer</string>
     <string name="menu_plugins">Die Plugins von OctoPrint</string>
 
     <string name="menu_lite_label_promote">Magst du Printoid Lite?</string>
