--- a/app/src/main/res/values-nl/strings_menu.xml
+++ b/app/src/main/res/values-nl/strings_menu.xml
@@ -2,14 +2,17 @@
 <resources>
 
     <string name="menu_title_partners">Vennoot</string>
+    <string name="menu_title_configuration">Configuratie</string>
+    <string name="menu_title_help">Hulp &amp; ondersteuning</string>
 
+    <string name="menu_account">Printoid-account</string>
     <string name="menu_connect_server">Koppel OctoPrint</string>
     <string name="menu_connect_printer">Koppel de printer</string>
     <string name="menu_disconnect_printer">Ontkoppel de printer</string>
     <string name="menu_connecting_printer">Printer verbinden</string>
     <string name="menu_video_streaming">Video streaming</string>
     <string name="menu_commands">Commando\'s</string>
-    <string name="menu_printer_profiles_settings">Servers\nOctoPrint</string>
+    <string name="menu_printer_profiles_settings">Servers OctoPrint</string>
     <string name="menu_app_settings">Parameters</string>
     <string name="menu_app_infos">Hulp</string>
     <string name="menu_octoprint_web">Web-interface OctoPrint</string>
@@ -20,12 +23,12 @@
     <string name="menu_full_screen_slicer">Inzoomen de slicer</string>
     <string name="menu_full_screen_more_tools">Inzoomen tools</string>
     <string name="menu_minimize">Minimaliseer</string>
-    <string name="menu_printoid_web">Website\nPrintoid</string>
+    <string name="menu_printoid_web">Website Printoid</string>
     <string name="menu_files">Bestanden</string>
     <string name="menu_spools">Spools</string>
     <string name="menu_timelapse">Filmpjes</string>
     <string name="menu_alarms">Meldingen</string>
-    <string name="menu_contact_developer">Contact\ndeveloper</string>
+    <string name="menu_contact_developer">Contact developer</string>
     <string name="menu_plugins">OctoPrint\'s plug-ins</string>
 
     <string name="menu_lite_label_promote">Vind je Printoid Lite leuk?</string>
