--- a/app/src/main/res/values-pt/strings_menu.xml
+++ b/app/src/main/res/values-pt/strings_menu.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="menu_title_partners">Parceiros</string>
+    <string name="menu_title_configuration">Configuração</string>
+    <string name="menu_title_help">Ajuda &amp; suporte</string>
 
+    <string name="menu_account">Printoid conta</string>
     <string name="menu_psu_plugin_on" translatable="false">PSU on</string>
     <string name="menu_psu_plugin_off" translatable="false">PSU off</string>
     <string name="menu_tplink_plugin_on" translatable="false">TP Link on</string>
@@ -20,8 +23,8 @@
     <string name="menu_full_screen_slicer">Expandir fatiador</string>
     <string name="menu_full_screen_more_tools">Expandir ferramentas</string>
     <string name="menu_minimize">Minimizar visualização</string>
-    <string name="menu_printer_profiles_settings">Servidores\nOctoPrint</string>
-    <string name="menu_app_settings">Configurações\ndo app</string>
+    <string name="menu_printer_profiles_settings">Servidores OctoPrint</string>
+    <string name="menu_app_settings">Configurações do app</string>
     <string name="menu_alarms">Gerenciador de alertas</string>
     <string name="menu_plugins">Plugins do OctoPrint</string>
     <string name="menu_spools">Gerenciador de carretéis</string>
@@ -30,9 +33,9 @@
     <string name="menu_files">Arquivos</string>
     <string name="menu_cults" translatable="false">Cults</string>
     <string name="menu_myminifactory" translatable="false">MyMiniFactory</string>
-    <string name="menu_printoid_web">Website do\nPrintoid</string>
+    <string name="menu_printoid_web">Website do Printoid</string>
     <string name="menu_timelapse">Timelapses</string>
-    <string name="menu_contact_developer">Contate\no desenvolvedor</string>
+    <string name="menu_contact_developer">Contate o desenvolvedor</string>
 
     <string name="menu_lite_label_promote">Você gostou do Printoid Lite?</string>
     <string name="menu_lite_text_promote">Apoie o desenvolvedor e aproveite a versão PRO ou a mais completa PREMIUM!</string>
