--- a/app/src/main/res/values-es/strings_menu.xml
+++ b/app/src/main/res/values-es/strings_menu.xml
@@ -30,6 +30,7 @@
     <string name="menu_alarms">Alertas</string>
     <string name="menu_contact_developer">Contact developer</string>
     <string name="menu_plugins">Plugins de OctoPrint</string>
+    <string name="menu_tos">Términos de servicio</string>
 
     <string name="menu_lite_label_promote">¿Te gusta Printoid Lite?</string>
     <string name="menu_lite_text_promote">¡Elimine anuncios y disfrute de la versión PRO y PREMIUM con todas las funciones!</string>
