--- a/app/src/main/res/values-fr/strings_menu.xml
+++ b/app/src/main/res/values-fr/strings_menu.xml
@@ -30,6 +30,7 @@
     <string name="menu_alarms">Manager d\'alertes</string>
     <string name="menu_contact_developer">Contacter le développeur</string>
     <string name="menu_plugins">Plugins OctoPrint</string>
+    <string name="menu_tos">Conditions d\'utilisation</string>
 
     <string name="menu_lite_label_promote">Vous aimez Printoid Lite?</string>
     <string name="menu_lite_text_promote">Supportez le développeur et profitez de la version complète PRO ou PREMIUM !</string>
