--- a/app/src/main/res/values-it/strings_menu.xml
+++ b/app/src/main/res/values-it/strings_menu.xml
@@ -30,6 +30,7 @@
     <string name="menu_printoid_web">Printoid website</string>
     <string name="menu_timelapse">Timelapse</string>
     <string name="menu_contact_developer">Contatta sviluppatore</string>
+    <string name="menu_tos">Termini di servizio</string>
 
     <string name="menu_lite_label_promote">Ti piace Printoid Lite?</string>
     <string name="menu_lite_text_promote">Supporta lo sviluppatore e goditi la versione completa PRO o PREMIUM!</string>
