--- a/app/src/main/res/values-nl/strings_menu.xml
+++ b/app/src/main/res/values-nl/strings_menu.xml
@@ -30,6 +30,7 @@
     <string name="menu_alarms">Meldingen</string>
     <string name="menu_contact_developer">Contact developer</string>
     <string name="menu_plugins">OctoPrint\'s plug-ins</string>
+    <string name="menu_tos">Servicevoorwaarden</string>
 
     <string name="menu_lite_label_promote">Vind je Printoid Lite leuk?</string>
     <string name="menu_lite_text_promote">Verwijder advertenties en geniet van PRO en PREMIUM full-featured versie!</string>
