--- a/app/src/main/res/values-pt/strings_menu.xml
+++ b/app/src/main/res/values-pt/strings_menu.xml
@@ -36,6 +36,7 @@
     <string name="menu_printoid_web">Website do Printoid</string>
     <string name="menu_timelapse">Timelapses</string>
     <string name="menu_contact_developer">Contate o desenvolvedor</string>
+    <string name="menu_tos">Termos de serviço</string>
 
     <string name="menu_lite_label_promote">Você gostou do Printoid Lite?</string>
     <string name="menu_lite_text_promote">Apoie o desenvolvedor e aproveite a versão PRO ou a mais completa PREMIUM!</string>
