--- a/app/src/main/res/values-it/strings_connect.xml
+++ b/app/src/main/res/values-it/strings_connect.xml
@@ -74,11 +74,17 @@
     <string name="alert_disconnect_printer_message">Printer sarà disconnesso dal tuo server OctoPrint. Sei sicuro di voler continuare?</string>
     <string name="printer_disconnected">Stampante disconnessa</string>
 
-    <!-- TTY SELECTOR -->
+    <!-- PRINTER CONNECTION SETTINGS -->
     <string name="select_tty_title">Connessione a una stampante</string>
     <string name="select_tty_keep">Salva le impostazioni di connessione</string>
     <string name="select_tty">Porta Seriale</string>
     <string name="select_tty_profile">Profilo della stampante</string>
     <string name="select_tty_auto_connect">Auto connessione</string>
+
+    <!-- FAKE ACKNOWLEDGMENT -->
+    <string name="fake_ack_label">Send fake acknowledgment</string>
+    <string name="fake_ack_send">Send</string>
+    <string name="fake_ack_sent_success">Fake ack sent</string>
+    <string name="fake_ack_sent_failure">Fake ack failure</string>
 
 </resources>
