--- a/app/src/main/res/values-nl/strings_connect.xml
+++ b/app/src/main/res/values-nl/strings_connect.xml
@@ -66,7 +66,7 @@
     <!-- PRINTER CONNECTOR -->
     <string name="main_printer_connected_msg">Printoid klaar om te communiceren met uw 3D printer.</string>
     <string name="main_printer_connected_title">3D printer verbonden</string>
-    <string name="main_printer_connection_error_msg">Printoid kan geen verbinding maken met de 3D printer.\nVerifieer de seriële verbinding tussen Raspberry Pi en printer en... schakel de printer in</string>
+    <string name="main_printer_connection_error_msg">Printoid kan geen verbinding maken met de 3D printer.\nVerifieer de seriële verbinding tussen Raspberry Pi en printer en… schakel de printer in</string>
     <string name="main_printer_connection_error_title">Fout bij verbinden met de printer</string>
 
     <!-- PRINTER DISCONNECTOR -->
@@ -74,11 +74,17 @@
     <string name="alert_disconnect_printer_message">De 3D printer zal ontkoppeld worden van uw OctoPrint server. Wilt u dat echt?</string>
     <string name="printer_disconnected">3D printer ontkoppeld</string>
 
-    <!-- TTY SELECTOR -->
+    <!-- PRINTER CONNECTION SETTINGS -->
     <string name="select_tty_title">Verbinding met een printer</string>
     <string name="select_tty_keep">Verbindingsinstellingen opslaan</string>
     <string name="select_tty">Seriële poort</string>
     <string name="select_tty_profile">Printer profiel</string>
     <string name="select_tty_auto_connect">Automatisch verbinden</string>
+
+    <!-- FAKE ACKNOWLEDGMENT -->
+    <string name="fake_ack_label">Send fake acknowledgment</string>
+    <string name="fake_ack_send">Send</string>
+    <string name="fake_ack_sent_success">Fake ack sent</string>
+    <string name="fake_ack_sent_failure">Fake ack failure</string>
 
 </resources>
